# mondantic

./: LICENSE  README.md  README.qmd  dev.md  pyproject.toml
.github/workflows/: ci.yml
src/mondantic/: __init__.py  codegen.py  coltypes.py  formatting.py  hydrate.py  query_builder.py  schema.py
src/mondayschema/: codegen.py  coltypes.py  hydrate.py  name.py
test/: conftest.py  test_batches.py  test_formatting.py  test_mondantic.py
