[project]
name = "mondayschema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Milton", email = "michael.r.milton@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.5",
    "pyhumps>=3.8.0",
    "requests>=2.32.3",
    "typer>=0.15.1",
]

[project.scripts]
mondayschema = "mondayschema:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
