[project]
name = "mondantic"
version = "0.1.0"
description = "Converts Monday.com boards into Pydantic schemas and populates them"
readme = "README.md"
authors = [
    { name = "Michael Milton", email = "michael.r.milton@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.5",
    "requests>=2.32.3",
    "typer>=0.15.1",
]

[project.scripts]
mondantic-codegen = "mondantic.codegen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "datamodel-code-generator[graphql]>=0.26.5",
    "devtools>=0.12.2",
    "jupyter>=1.1.1",
    "notebook>=7.3.2",
    "papermill>=2.6.0",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
]
